# project_llm

./: .gitignore  README.md  cli.py  pllm_config.example.yaml  pllm_config.yaml  pyproject.toml  setup.ps1
.claude/: settings.local.json
data/schema/: mitarbeiter.yaml
src/: app.py  config.py  converter.py  db.py  generator.py  llm.py  profiler.py  query_log.py  schema.py  yaml2duckdb.py
